[package]
name = "merkle_proof"
version = "0.2.0"
authors = ["Michael Sproul <michael@sigmaprime.io>"]
edition = "2021"

[dependencies]
ethereum-types = "0.9.2"
lazy_static = "1.4.0"
safe_arith = { path = "../safe_arith" }
[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
eth2_hashing_wasm = { path = "../../crypto/eth2_hashing_wasm" }
[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dependencies]
eth2_hashing = { path = "../../crypto/eth2_hashing" }

[dev-dependencies]
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"

[features]
arbitrary = ["ethereum-types/arbitrary"]
