[package]
name = "bls"
version = "0.2.0"
authors = ["Paul Hauner <paul@paulhauner.com>"]
edition = "2021"

[dependencies]
eth2_ssz = { path = "../../consensus/ssz" }
tree_hash = { path = "../../consensus/tree_hash" }
milagro_bls = { git = "https://github.com/sigp/milagro_bls", tag = "v1.4.2", optional = true }
rand = { version = "0.7.3", default-features = false, features = ["alloc"] }
serde = "1.0.116"
serde_derive = "1.0.116"
eth2_serde_utils = { path = "../../consensus/serde_utils" }
hex = "0.4.2"
[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
eth2_hashing_wasm = { path = "../eth2_hashing_wasm" }
[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dependencies]
eth2_hashing = { path = "../eth2_hashing" }
ethereum-types = "0.9.2"
arbitrary = { version = "1.0", features = ["derive"], optional = true }
zeroize = { version = "1.4.2", features = ["zeroize_derive"] }
blst = { version = "0.3.3", optional = true }
getrandom = { version = "0.2.7", features = ["js"] }

[features]
default = ["supranational"]
fake_crypto = []
milagro = ["milagro_bls"]
supranational = ["blst"]
supranational-portable = ["supranational", "blst/portable"]
supranational-force-adx = ["supranational", "blst/force-adx"]
