[package]
name = "eth2_hashing_wasm"
version = "0.3.0"
authors = ["Aurora <hello@aurora.dev>"]
edition = "2021"
license = "Apache-2.0"
description = "Reimplemented eth2_hashing using near-sdk, for usage in NEAR WASM contracts"

[dependencies]
near-sdk = { version = "4.0.0" }

[dev-dependencies]
rustc-hex = "2.1.0"